--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,8 @@ github_username:  your-github-handle # DO NOT include the @ character, or else t
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: minima
+
+---
+title: "El título de tu post"
+date: AAAA-MM-DD
+---
